# BRICK

./: .gitignore  AGENTS.md  BRICK-CONSTITUTION.md  README.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: pretooluse_block_offroute_launch.py  session_start_official_route.py  test_official_route_hooks.py
.github/workflows/: release-gate.yaml
agent/: README.md  receipt.py  receipt.yaml  return_fact.py  spec.py
agent/disciplines/: closed-agentfact.md  model-lane-matching.md
agent/hooks/: bindings.yaml  registry.yaml
agent/objects/: coo.yaml  cto-lead.yaml  design-lead.yaml  dev.yaml  inspector.yaml  pm-lead.yaml  qa-lead.yaml  qa.yaml
agent/prompts/: coo.md  cto-lead.md  design-lead.md  dev.md  inspector.md  pm-lead.md  qa-lead.md  qa.md
agent/tool_policies/: leader-coordination.yaml  probe-write-scoped.yaml  read-write-scoped.yaml  reviewer-readonly.yaml  web-capable.yaml
brick/: README.md  __init__.py  building.py  building.yaml  comparison.py  comparison.yaml  spec.py  work.py  work.yaml
brick/building_plans/: agent-brain-swap-dogfood-0-graph-dogfood.yaml  agent-projection-sync-0-dogfood.yaml  (+128 more)
evidence-logs/: agent-final-designfan-cli.json  agent-final-designfan-decl-rationale.md  agent-final-designfan-decl.json  agent-final-designfan-shape.txt  agent-final-package-path-admission.err  agent-final-workfan-cli.json  agent-final-workfan-decl-rationale.md  agent-final-workfan-decl.json  agent-final-workfan-shape.txt  agent3-finalize-designfan-cli.json  agent3-finalize-designfan-decl-rationale.md  agent3-finalize-designfan-decl.json  agent3-finalize-designfan-shape.txt  agent3-finalize-workfan-cli.json  agent3-finalize-workfan-decl-rationale.md  agent3-finalize-workfan-decl.json  agent3-finalize-workfan-shape.txt  cli_draft_designfan.txt  cli_draft_workfan.txt  d5-node-shape-summary.txt  demo-designfan-decl-rationale.md  demo-designfan-decl.json  demo-workfan-decl-rationale.md  demo-workfan-decl.json
link/: README.md  __init__.py  carry.yaml  gate.py  gate.yaml  movement.yaml  spec.py  transfer.py  transfer.yaml  transition.py
qa-probes/: graph_draft.py.qa-backup  qa-own-designfan-decl-rationale.md  qa-own-designfan-decl.json  qa-own-designfan.json  qa-own-workfan-decl-rationale.md  qa-own-workfan-decl.json  qa-own-workfan-rationale.md  qa-own-workfan.json  qa-own-workfan2-rationale.md  qa-own-workfan2.json  qa_selflock_probe_a2.py  qa_selflock_probes.py
support/: README.md
(+10490 files in other folders)
